20091120 - Mark:
	1. Added high resolution timing to the player driver.

20091118 - Mark:
	1. Fixed a bug in John's code:
	        Scribbler::drive() -left and right were reversed.

	2. Calibrated Scribbler #15
	        a. Going forward in a straight line:
	              avg function: right(left) = left - 14

	3. Added preliminary turning. As of now, turning and driving are mutually exclusive.

	4. Wrote square driving client in player, but having issues with latency; see TODO.

20091113 - Mark:
	1. Added message processing for Position2D geometry.

	2. Started working on Position2D odometry.

20091111 - Mark:
	1. Fixed a bug in the driver that was not permitting it to handle messages
	   properly. Fribbler::ProcessMessage() first parameter must be QueuePointer&
	   and not MessagePointer* as I had written initially.

	2. Got the Player server to successfully process a message, specifically
	   PLAYER_POSITION2D_CMD_VEL, so we're able to get the Scribbler to drive
	   from within Player. The significance of this is that we basically set the
	   stage for handling all the other messages since we know that this works.

20091106 - Mark:
	1. Created a preliminary driver testing program (/src/test-fribbler.cpp);
	   It can be built with a "make test-fribbler", or simply "make all",
	   which will make all targets.

	2. Added preliminary message processing code.

20091104 - Mark:
	1. Interesting tidbit that wasted some of my time:
	   You must provide (Add) at LEAST one interface in the driver's constructor
	   for the driver to be loaded properly. If no interfaces are provided,
	   the thread management methods, namely MainSetup() and subsequently Main(),
	   will never get called. Don't make the same mistake I did!

	2. Added a macro (FRIBBLER_DEBUG) in /include/Fribbler.h
	   Defining it as 1 (nonzero) enables debugging messages (obviously).

20091030 - Sam:

	1. Created square.cpp in src that will drive the scribbler simple as a square.
